--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "video.js": "7.20.0"
   },
   "scripts": {
-    "start": "PORT=3002 react-scripts start --env-file .env.development",
+    "start": "HOST=localhost PORT=3002 react-scripts start --env-file .env.development",
     "build": "react-scripts build --env-file .env.production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
