--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,3 +1,5 @@
+version: '3.5'
+
 name: yolotester_dev
 
 services:
@@ -13,6 +15,7 @@ services:
 
   celery:
     # image: ship:celery
+    # image: jingandongbei/eii-new:dev-celery
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -24,11 +27,15 @@ services:
       - UDEV=1
       - MINIO_ACCESS_KEY=CcN6vNP3IhhYJGXxRFA8
       - MINIO_SECRET_KEY=laifgTSxOuMbnSe0eNXRLN1C6DzOHNkQEJ4a6Wo6
+      - NVIDIA_VISIBLE_DEVICES=all  # 让容器可以访问所有 GPU
+      - NVIDIA_DRIVER_CAPABILITIES=all  # 让容器具有完整的 GPU 功能（包括计算、视频等）
     deploy:
       resources:
         reservations:
           devices:
-            - capabilities: [ gpu ]
+            - driver: nvidia
+              count: all  # 你可以指定具体的 GPU 数量，例如 '1' 只使用1个GPU
+              capabilities: [gpu]
     runtime: nvidia
 
   backend:
@@ -39,8 +46,8 @@ services:
     restart: always
     ports:
       - "8008:8000"
-    command: python3 main.py
-    # command: /backend/start.sh
+    # command: python3 main.py
+    command: sh -c "python3 main.py && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     privileged: true
     volumes:
       - /dev:/dev
@@ -62,6 +69,11 @@ services:
         reservations:
           devices:
             - capabilities: [ gpu ]
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f -X POST http://localhost:8000/api/health || exit 1"]
+      interval: 30s     # 每 30 秒检查一次
+      timeout: 10s      # 健康检查的超时时间为 10 秒
+      retries: 3        # 连续失败 3 次，认为服务不健康
     ipc: host
     runtime: nvidia
 
@@ -73,8 +85,8 @@ services:
     volumes:
       - ./frontend:/frontend
     restart: always
-    # command: bash -c "nginx && yarn start"
-    command: bash -c 'nginx -g "daemon off;"'
+    command: bash -c "nginx && yarn start"
+    # command: bash -c 'nginx -g "daemon off;"'
     ports:
       - 8002:80
     depends_on:
@@ -88,22 +100,27 @@ services:
       MINIO_ROOT_PASSWORD: password
       MINIO_SERVER_URL: http://minio:9000
       MINIO_BROWSER_REDIRECT_URL: http://localhost:9092
-      # MINIO_BROWSER_REDIRECT_URL: http://192.168.1.10/minio/ui
     command: server --console-address ":9092" /data
     ports:
-      - "9000"
+      - "9000:9000"
       - "9092:9092"
     volumes:
       - ./minio/data:/data
 
+  # sudo chown -R 10001:10001 ./volumes/loki
   loki:
     image: grafana/loki:2.6.1
-    user: "$UID:$GID"
     ports:
-      - "3100"
+      - "3100:3100"
+    user: "10001:10001"
     volumes:
       # directory must be created first, with uid:gid 10001:10001
       - ./volumes/loki:/loki
+    healthcheck:
+      test: ["CMD", "wget","--spider", "http://localhost:3100/ready"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   promtail:
     image: grafana/promtail:2.6.1
@@ -116,10 +133,10 @@ services:
       - /var/lib/docker/containers:/var/lib/docker/containers
 
   # will be available at http://127.0.0.1:3000
-  # default credentials: admin/admin
+  # sudo chown -R 472:472 ./volumes/grafana
   grafana:
     image: grafana/grafana:9.2.2
-    user: "$UID:$GID"
+    user: "472:472"
     ports:
       - "3001:3000"
     volumes:
@@ -128,6 +145,9 @@ services:
       # automatically configure the loki datasource
       - ./grafana/provisioning/:/etc/grafana/provisioning/
       - ./grafana/grafana.ini:/etc/grafana/grafana.ini
+    depends_on:
+      loki:
+        condition: service_healthy
 
   redis:
     image: redis:6.2.6
@@ -137,13 +157,13 @@ services:
 
   mongo:
     image: mongo:7.0.6
-    restart: always
+    restart: no
     ports:
       - 27018:27017
     volumes:
       - ./mongo/data:/data/db
-    # healthcheck:
-    #   test: ["CMD", "mongo", "admin", "--eval", "db.stats()"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 3
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z localhost 27018"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
