--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -24,13 +24,17 @@ services:
       - ./backend:/backend
     environment:
       - UDEV=1
-      - MINIO_ACCESS_KEY=tvl0IC3ACVbAYotfTPgq
-      - MINIO_SECRET_KEY=qBLYfpiVGUGNvuAsGzrENzjdfVWz6Yn19UUvOgm3
+      - MINIO_ACCESS_KEY=CcN6vNP3IhhYJGXxRFA8
+      - MINIO_SECRET_KEY=laifgTSxOuMbnSe0eNXRLN1C6DzOHNkQEJ4a6Wo6
+      - NVIDIA_VISIBLE_DEVICES=all  # 让容器可以访问所有 GPU
+      - NVIDIA_DRIVER_CAPABILITIES=all  # 让容器具有完整的 GPU 功能（包括计算、视频等）
     deploy:
       resources:
         reservations:
           devices:
-            - capabilities: [ gpu ]
+            - driver: nvidia
+              count: all  # 你可以指定具体的 GPU 数量，例如 '1' 只使用1个GPU
+              capabilities: [gpu]
     runtime: nvidia
 
   backend:
@@ -64,6 +68,11 @@ services:
         reservations:
           devices:
             - capabilities: [ gpu ]
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f -X POST http://localhost:8000/api/health || exit 1"]
+      interval: 30s     # 每 30 秒检查一次
+      timeout: 10s      # 健康检查的超时时间为 10 秒
+      retries: 3        # 连续失败 3 次，认为服务不健康
     ipc: host
     runtime: nvidia
 
@@ -100,12 +109,17 @@ services:
 
   loki:
     image: grafana/loki:2.6.1
-    user: "$UID:$GID"
+    user: "10001:10001"
     ports:
       - "3100"
     volumes:
       # directory must be created first, with uid:gid 10001:10001
       - ./volumes/loki:/loki
+    healthcheck:
+      test: ["CMD", "wget","--spider", "http://localhost:3100/ready"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   promtail:
     image: grafana/promtail:2.6.1
@@ -121,15 +135,18 @@ services:
   # default credentials: admin/admin
   grafana:
     image: grafana/grafana:9.2.2
-    user: "$UID:$GID"
-    # ports:
-    #   - "3000:3000"
+    user: "472:472"
+    ports:
+      - "3010:3010"
     volumes:
       # directory must be created first, with uid:gid 472:472
       - ./volumes/grafana:/var/lib/grafana
       # automatically configure the loki datasource
       - ./grafana/provisioning/:/etc/grafana/provisioning/
       - ./grafana/grafana.ini:/etc/grafana/grafana.ini
+    depends_on:
+      loki:
+        condition: service_healthy
 
   redis:
     image: redis:6.2.6
@@ -144,8 +161,8 @@ services:
       - 27017:27017
     volumes:
       - ./mongo/data:/data/db
-    # healthcheck:
-    #   test: ["CMD", "mongo", "admin", "--eval", "db.stats()"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 3
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z localhost 27018"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
