--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,5 +1,3 @@
-version: '3.5'
-
 name: yolotester_dev
 
 services:
@@ -25,10 +23,9 @@ services:
       - ./backend:/backend
     environment:
       - UDEV=1
-      - MINIO_ACCESS_KEY=CcN6vNP3IhhYJGXxRFA8
-      - MINIO_SECRET_KEY=laifgTSxOuMbnSe0eNXRLN1C6DzOHNkQEJ4a6Wo6
       - NVIDIA_VISIBLE_DEVICES=all  # 让容器可以访问所有 GPU
       - NVIDIA_DRIVER_CAPABILITIES=all  # 让容器具有完整的 GPU 功能（包括计算、视频等）
+      - RESULT_DIR=/tmp/results
     deploy:
       resources:
         reservations:
@@ -37,6 +34,8 @@ services:
               count: all  # 你可以指定具体的 GPU 数量，例如 '1' 只使用1个GPU
               capabilities: [gpu]
     runtime: nvidia
+    env_file:
+      - .dev_env
 
   backend:
     # image: lyl472324464/ship:backend-amd64
@@ -49,6 +48,7 @@ services:
     # command: python3 main.py
     command: sh -c "python3 main.py && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     privileged: true
+    working_dir: /backend
     volumes:
       - /dev:/dev
       - /run/udev:/run/udev:ro
@@ -57,8 +57,6 @@ services:
       - /dev/bus/usb:/dev/bus/usb
     environment:
       - UDEV=1
-      - MINIO_ACCESS_KEY=CcN6vNP3IhhYJGXxRFA8
-      - MINIO_SECRET_KEY=laifgTSxOuMbnSe0eNXRLN1C6DzOHNkQEJ4a6Wo6
       # - LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1
     depends_on:
       # tritonserver:
@@ -70,36 +68,34 @@ services:
           devices:
             - capabilities: [ gpu ]
     healthcheck:
-      test: ["CMD-SHELL", "curl -f -X POST http://localhost:8000/api/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f -X GET http://localhost:8000/api/health || exit 1"]
       interval: 30s     # 每 30 秒检查一次
       timeout: 10s      # 健康检查的超时时间为 10 秒
       retries: 3        # 连续失败 3 次，认为服务不健康
     ipc: host
     runtime: nvidia
+    env_file:
+      - .dev_env
 
   frontend:
-    # image: ship:frontend
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     volumes:
       - ./frontend:/frontend
+      - /frontend/node_modules:/frontend/node_modules
+    working_dir: /frontend
     restart: always
-    command: bash -c "nginx && yarn start"
-    # command: bash -c 'nginx -g "daemon off;"'
     ports:
-      - 8002:80
+      - "3002:3000"
     depends_on:
       - backend
 
   minio:
     image: quay.io/minio/minio
     restart: always
-    environment:
-      MINIO_ROOT_USER: admin
-      MINIO_ROOT_PASSWORD: password
-      MINIO_SERVER_URL: http://minio:9000
-      MINIO_BROWSER_REDIRECT_URL: http://localhost:9092
+    env_file:
+      - .dev_env
     command: server --console-address ":9092" /data
     ports:
       - "9000:9000"
@@ -115,7 +111,7 @@ services:
     user: "10001:10001"
     volumes:
       # directory must be created first, with uid:gid 10001:10001
-      - ./volumes/loki:/loki
+      - ./volumes/dev_loki:/loki
     healthcheck:
       test: ["CMD", "wget","--spider", "http://localhost:3100/ready"]
       interval: 30s
@@ -163,7 +159,7 @@ services:
     volumes:
       - ./mongo/data:/data/db
     healthcheck:
-      test: ["CMD-SHELL", "nc -z localhost 27018"]
+      test: ["CMD-SHELL", "mongosh --eval 'db.runCommand(\"ping\").ok' --quiet"]
       interval: 10s
       timeout: 5s
       retries: 3
