--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=http://192.168.1.16:8002
+REACT_APP_API_URL=http://localhost:8008
+REACT_APP_MINIO_URL=http://localhost:9000
+REACT_APP_WEBSOCKET_URL=ws://localhost:8008
