--- a/frontend/conf.d/prod.conf
+++ b/frontend/conf.d/prod.conf
@@ -64,6 +64,12 @@ server {
 
     # 代理图片 minio
     location /yolo-files {
+        # 在 proxy_pass 后面添加 / 的作用是移除请求中的匹配路径部分 (/yolo-files)
         proxy_pass http://minio:9000;
+        # rewrite ^/yolo-files/(.*)$ /$1 break;
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
